--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-ga": "^2.5.7",
+    "react-particles-js": "^2.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
   },
